--- a/app/src/main/res/layout/myorder_item.xml
+++ b/app/src/main/res/layout/myorder_item.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent">
 
         <LinearLayout
-            android:id="@+id/item_view"
+            android:id="@+id/myorder_item"
             android:layout_width="match_parent"
             android:layout_height="156dp"
             android:background="@drawable/card_light"
@@ -28,15 +28,23 @@
                 android:layout_height="match_parent"
                 android:layout_weight="0.32">
                 <TextView
-                    android:id="@+id/item_cator"
+                    android:id="@+id/myorder_date_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="日期：2017/4/25"
+                    android:text="日期"
                     android:textColor="#000000"
                     android:textSize="18sp" />
+                <TextView
+                    android:id="@+id/myorder_date_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBottom="@+id/myorder_date_title"
+                    android:layout_toEndOf="@+id/myorder_date_title"
+                    android:layout_toRightOf="@+id/myorder_date_title"
+                    android:text="TextView" />
 
                 <TextView
-                    android:id="@+id/item_title"
+                    android:id="@+id/myorder_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:lineSpacingExtra="2dp"
@@ -44,12 +52,13 @@
                     android:text="配送内容："
                     android:textColor="#1F1F1F"
                     android:textSize="18sp"
-                    android:layout_above="@+id/item_content"
+                    android:layout_below="@+id/myorder_date_title"
                     android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true" />
+                    android:layout_alignParentStart="true"
+                    android:layout_marginTop="11dp" />
 
                 <TextView
-                    android:id="@+id/item_content"
+                    android:id="@+id/myorder_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:lineSpacingExtra="1dp"
@@ -57,7 +66,8 @@
                     android:text="16号楼→嘉园\nPY一份"
                     android:textColor="#6B6B6B"
                     android:textSize="14sp"
-                    android:layout_centerVertical="true"
+                    android:layout_marginTop="10dp"
+                    android:layout_below="@+id/myorder_title"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true" />
                 <TextView
@@ -71,6 +81,8 @@
                     android:layout_alignParentEnd="true"
                     android:layout_marginRight="18dp"
                     android:layout_marginEnd="18dp" />
+
+
             </RelativeLayout>
 
 
