--- a/app/src/main/res/layout/receive_order.xml
+++ b/app/src/main/res/layout/receive_order.xml
@@ -10,12 +10,13 @@
     android:orientation="vertical" >
 
     <RelativeLayout
+        android:id="@+id/receive_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
 
         <LinearLayout
-            android:id="@+id/item_view"
+
             android:layout_width="match_parent"
             android:layout_height="156dp"
             android:background="@drawable/card_light"
@@ -30,28 +31,38 @@
                 android:layout_weight="0.32">
 
                 <TextView
-                    android:id="@+id/item_cator"
+                    android:id="@+id/receive_date_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="日期：2017/4/25"
+                    android:text="时间:"
+                    android:textColor="#000000"
+                    android:textSize="18sp" />
+                <TextView
+                    android:id="@+id/receive_date_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBottom="@+id/receive_date_title"
+                    android:layout_toEndOf="@+id/receive_date_title"
+                    android:layout_toRightOf="@+id/receive_date_title"
+                    android:text="TextView"
                     android:textColor="#000000"
                     android:textSize="18sp" />
 
                 <TextView
-                    android:id="@+id/item_title"
+                    android:id="@+id/receive_item_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_above="@+id/item_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
                     android:lineSpacingExtra="2dp"
                     android:maxLines="2"
                     android:text="配送内容："
                     android:textColor="#1F1F1F"
-                    android:textSize="18sp" />
+                    android:textSize="18sp"
+                    android:layout_above="@+id/receive_item_text"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true" />
 
                 <TextView
-                    android:id="@+id/item_content"
+                    android:id="@+id/receive_item_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
@@ -74,10 +85,13 @@
                     android:text="待配送"
                     android:textColor="@color/swiperefresh_color2"
                     android:textSize="18sp" />
+
+
             </RelativeLayout>
 
 
             <LinearLayout
+
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="2dp"
