--- a/app/src/main/res/layout/activity_email_change.xml
+++ b/app/src/main/res/layout/activity_email_change.xml
@@ -11,16 +11,11 @@
 
         <include layout="@layout/topbar_layout"/>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="10dp">
-
-        </RelativeLayout>
 
         <RelativeLayout
             android:id="@+id/school_change_layout"
             android:layout_width="match_parent"
-            android:layout_height="35dp"
+            android:layout_height="wrap_content"
             android:background="@drawable/boarder"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp">
@@ -38,12 +33,14 @@
             <Spinner
                 android:id="@+id/school_spinner"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_alignBottom="@+id/school_textview"
                 android:layout_toRightOf="@+id/school_textview"
-                android:background="@color/cardview_light_background"
-                android:entries="@drawable/menu"
-                android:visibility="visible" />
+                android:spinnerMode="dialog"
+                android:gravity="center"
+                android:background="@color/base_color_text_gray"
+                android:layout_alignParentTop="true"
+                />
 
         </RelativeLayout>
 
@@ -51,9 +48,9 @@
             android:id="@+id/email_change_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/boarder"
             android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp">
+            android:layout_marginRight="5dp"
+            android:background="@drawable/boarder">
 
             <TextView
                 android:id="@+id/email_textView"
@@ -67,16 +64,14 @@
 
             <EditText
                 android:id="@+id/editText2"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
-                android:textColor="@color/base_color_text_black"
                 android:inputType="text"
                 android:maxLength="20"
+                android:textColor="@color/base_color_text_black"
                 android:textColorHint="@color/gray"
                 android:textSize="30px"
-                android:layout_toLeftOf="@+id/email_text"
-                android:layout_toStartOf="@id/email_text"
                 android:layout_toRightOf="@+id/email_textView"
                 android:layout_toEndOf="@+id/email_textView" />
 
@@ -84,16 +79,12 @@
                 android:id="@+id/email_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignBaseline="@+id/email_textView"
-                android:layout_alignBottom="@+id/email_textView"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_marginEnd="14dp"
-                android:layout_marginRight="14dp"
                 android:text=" @bjtu.edu.cn"
                 android:textColor="@color/base_color_text_black"
-                android:textSize="30px" />
+                android:textSize="30px"
+                android:layout_below="@+id/editText2"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true" />
 
         </RelativeLayout>
 
